kubernetes/overlays/alpha/vault-ha/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - vault
            topologyKey: kubernetes.io/hostname
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - alpha-worker-1
                - alpha-worker-2
                - alpha-worker-3
